--- a/src/code.njk
+++ b/src/code.njk
@@ -9,7 +9,7 @@ description: My technical accomplishments, projects, work
 
 > [Site colophon](/colophon)
 
-Like most delicious recipes and dishes, I believe websites are made by carefully choosing a few simple ingredients and preparing them with great gusto. For a quick summary of my work, take a look at this [portfolio gallery of my latest projects](/menu) disguised as a restaurant menu card.
+Like most delicious recipes, a tasty website is made using simple ingredients and thoughtful preparation. For a quick summary of my work, take a look at this [portfolio gallery of my latest projects](/menu) disguised as a restaurant menu card.
 
 
 
